--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<title>Sonic Fiber</title>
+<title>Sonic Fiber Map</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
 </head>
