--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <head>
 <title>Sonic Fiber Map</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+<link rel="stylesheet" href="css/leaflet.css" />
 </head>
 <body style='margin: 0'>
 <a href="https://github.com/ThatDan/sonic_fiber"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 1000" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 <div id='map' style='width: 100%; height: 100%'></div>
 </body>
-<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
-<script src="wicket.js"></script>
-<script src="wicket-leaflet.js"></script>
+<script src="js/leaflet.js"></script>
+<script src="js/wicket.js"></script>
+<script src="js/wicket-leaflet.js"></script>
 <script>
 var map = L.map('map', {
     center: [37.77, -122.45],
@@ -31,7 +31,7 @@ ajax('sonic_fiber.csv', function(response) {
       if (!permitsByCNN[cols[0]]) permitsByCNN[cols[0]] = [];
       permitsByCNN[cols[0]].push(cols[1]);
     } else {
-      // Show broken data. "Intersection" is for intersection-specific permits. Not very interesting to map. Might be related to running laterals to houses?
+      // Log broken data. "Intersection" is for intersection-specific permits. Not very interesting to map. Might be related to running laterals to houses?
       if (cols[4] != "Intersection") console.log("Missing CNN", cols);
     }
   }
